[package]
name = "whole_kafka"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
rdkafka = { version = "0.36.1", default-features = false, features = ["libz", "tokio", "zstd","cmake-build"]  }


whole_config = { path = "../whole_config" }
watch_script= { path = "../watch_script" }